--- a/SOASerialization/SOASerialization/SOASerialization.csproj
+++ b/SOASerialization/SOASerialization/SOASerialization.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Output.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializerFactory.cs" />
     <Compile Include="XmlSer.cs" />
   </ItemGroup>
   <ItemGroup>
